syntax = "proto3";

package pb;

import "search.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";

message SearchRequest {
    string query = 1;
    int32 page_number = 2;
    int32 page_size = 3;
}

message SearchResult {
  repeated UserData user_data = 1;
  repeated ChurchData church_data = 2;
  repeated PostData post_data = 3;
  bool has_more = 4;
  // string source = 1;
}